fix #28: silence bogus VirtualFlow maxCellCount log spam in HexView
The INFO message is a false positive from an old JavaFX bug (JDK-8140504,
still present in current OpenJFX master): VirtualFlow.addTrailingCells
compares the absolute row index (up to 0x1000 here) against the viewport
height in pixels, so any ListView with more rows than the viewport is
pixels tall trips the check whenever it is scrolled to the very end and
the flow pads the space below the last row with empty cells. It is
harmless and self-correcting, and cannot be prevented app-side (verified
with a standalone repro sweeping 207 window sizes: setFixedCellSize does
not help either), so we filter out exactly this one log message.

Also format the -fx-font-size style with Locale.ROOT: on decimal-comma
locales (e.g. de-DE) "%.3f" produced "6,566" and the CSS parser silently
dropped the fractional part, making the font scale in integer steps only.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>